gitops/manifests/robotshop/canary.yml
####Canary Deployment V2 with changes made to the web html :Green version

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-2
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
        # ===============================
        # NGINX FRONT PROXY (SIDE CAR)
        # ===============================
        - name: web-nginx
          image: nginx:1.21.6
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d


        # ===============================
        # EXISTING WEB CONTAINER
        # ===============================
        - name: canary-robot-app-web
          image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/web:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "60Mi"
            limits:
              cpu: "200m"
              memory: "100Mi"

      volumes:
        - name: nginx-config
          configMap:
            name: web-nginx-config
